fixed brandbar overflow issue, added touch hotfix for bootstrap

--- a/public/download/latest/css/kesign.css
+++ b/public/download/latest/css/kesign.css
@@ -1225,6 +1225,16 @@ body .navbar .brand {
 }
 .brandbar {
   background: #fff;
+  overflow: hidden;
+  zoom: 1;
+}
+.brandbar:before,
+.brandbar:after {
+  content: "";
+  display: table;
+}
+.brandbar:after {
+  clear: both;
 }
 .brandbar .statusbar {
   margin: 10px 0;
